dotnet_macros/tests/ui/dotnet_export_invalid_name.rs
use dotnet_macros::dotnet_export;

#[dotnet_export(name = "parse-position")]
pub fn parse_position() -> i32 {
    1
}

fn main() {}
